--- a/tictactoe.html
+++ b/tictactoe.html
@@ -15,7 +15,7 @@
 			
 			<h1>TIC TAC TOE</h1>
 			
-			<div class="playerbox" id="player1"></div>
+			<div class="playerbox" id="playerbox1"></div>
 			
 			<div class="gameboard">
 				<div class="tile rightb bottomb" 	id="0"></div>
@@ -29,7 +29,7 @@
 				<div class="tile"		 			id="8"></div>
 			</div>
 			
-			<div class="playerbox" id="player2"></div>
+			<div class="playerbox" id="playerbox2"></div>
 			
 			<div class="message"></div>
 			<button class="play-again">Play Again</button>
