--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="playerbox" id="playerbox2"></div>
 			
 			<div class="message"></div>
-			<button class="play-again">Play Again</button>
+			<button class="play-again">New Game</button>
 			
 		</div>
 
